third-commit use-develop

--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="wrapper">
-    <div class="mainvisual">
-      <img src="https://placehold.jp/900x500.png">
-    </div>
-    <nav class="nav">
-      <a href="index.html">Wooden Jewelry</a>
-      <ul class="nav__content">
+  <div class="mainvisual">
+    <img src="https://placehold.jp/1920x900.png">
+  </div>
+  <header id="header">
+    <h1 class="header__title">
+      <a href="index.html">
+        <img alt="wooden jewelry" src="https://placehold.jp/1000x140.png">
+      </a>
+    </h1>
+    <nav>
+      <ul>
         <li>
           <a href="#concept">Concept</a>
         </li>
@@ -22,40 +26,40 @@
           <a href="#work">Work</a>
         </li>
         <li>
-          <a href="">Contact</a>
+          <a href="mailto:xxxxx@xxx.xxx.com?subject=お問い合わせ">Contact</a>
         </li>
       </ul>
     </nav>
+  </header>
+  <div class="container">
     <main>
-      <div class="mainContent">
-        <div id="concept">
-          <div class="mainContent__img">
-            <img src="https://placehold.jp/500x500.png">
-          </div>
-          <div class="mainContent__text">
-            <h1>私たちの考えるジュエリーとは</h1>
-            <p>Concept</p>
-            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-            <br>
-            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-          </div>
+      <section id="concept" class="container__content">
+        <div class="container__content__img">
+          <img src="https://placehold.jp/500x500.png">
         </div>
-        <div id="work">
-          <div class="mainContent__img">
-            <img src="https://placehold.jp/500x500.png">
-          </div>
-          <div class="mainContent__text">
-            <h1>ハンドメイドにこだわる理由</h1>
-            <p>Work</p>
-            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-            <br>
-            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-          </div>
+        <div class="container__content__text">
+          <h2 class="textTitle">私たちの考えるジュエリーとは</h2>
+          <span class="textTitleEn">Concept</span>
+          <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+          <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
         </div>
-      </div>
+      </section>
+      <section id="work" class="container__content">
+        <div class="container__content__text">
+          <h2 class="textTitle">ハンドメイドにこだわる理由</h2>
+          <span class="textTitleEn">Work</span>
+          <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+          <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+        </div>
+        <div class="container__content__img">
+          <img src="https://placehold.jp/500x500.png">
+        </div>
+      </section>
     </main>
-    <footer>
-      <p>Wooden Jewelry</p>
+    <footer id="footer">
+      <div class="footer__img">
+        <img src="https://placehold.jp/1000x140.png">
+      </div>
       <p>©️2021 Wooden Jewelry</p>
     </footer>
   </div>
